tests/snapshots/test_fetch_schema__fetch_schema_with_invalid_peer_table.snap
---
source: tests/test_fetch_schema.rs
expression: schema_family.unwrap_err()
---
Invalid peer table name 'rel_writer_audience_company', it should be in the format of 'rel_table1_table2', with exactly 2 tables. 
If you do not expect this table to represent a peer relationship, please rename it to a different one, so it doesn't start with 'rel_'
