tests/snapshots/test_fetch_schema__fetch_schema_with_unknown_peer_tables.snap
---
source: tests/test_fetch_schema.rs
expression: schema_family.unwrap_err()
---
Table 'audience' does not exist, but it's specified by the peer-relationship table 'rel_artist_audience'
If you do not expect this table to represent a peer relationship, please rename it to a different one, so it doesn't start with 'rel_'
