tests/snapshots/test_fetch_schema__fetch_schema_with_wrong_column_type.snap
---
source: tests/test_fetch_schema.rs
expression: schema_family.unwrap_err()
---
Invalid type: 'Null' for the column 'created_at@log'
